--- a/package.json
+++ b/package.json
@@ -1,35 +1,44 @@
 {
-  "name": "alias",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "jest",
-    "test:c": "npx jest --coverage",
-    "start": "nodemon -L --files src/server.ts",
-    "docker": "docker-compose up --build"
-  },
-  "keywords": [],
-  "author": "Team 1",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/preset-typescript": "^7.24.7",
-    "@eslint/js": "^9.11.1",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^22.7.2",
-    "eslint": "^9.11.1",
-    "globals": "^15.9.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.7",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.7.0"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "mongoose": "^8.6.3"
-  }
+	"name": "alias",
+	"version": "1.0.0",
+	"description": "",
+	"main": "./build/server.js",
+	"type": "module",
+	"scripts": {
+		"test": "jest",
+		"test:coverage": "jest --coverage",
+		"build": "rm -rf ./build & tsc",
+		"dev": "tsc -w & nodemon -L --watch ./build .",
+		"prod": "node .",
+		"lint": "eslint",
+		"docker": "docker compose up -d --build",
+		"docker:start": "docker compose start",
+		"docker:restart": "docker compose restart",
+		"docker:stop": "docker compose stop",
+		"docker:down": "docker compose down"
+	},
+	"keywords": [],
+	"author": "Team 1",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/preset-typescript": "^7.24.7",
+		"@eslint/js": "9.11.1",
+		"@types/express": "^5.0.0",
+		"@types/jest": "^29.5.13",
+		"@types/node": "^22.7.2",
+		"eslint": "^9.11.1",
+		"globals": "^15.9.0",
+		"jest": "^29.7.0",
+		"nodemon": "^3.1.7",
+		"prettier": "3.3.3",
+		"ts-jest": "^29.2.5",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.5.4",
+		"typescript-eslint": "^8.7.0"
+	},
+	"dependencies": {
+		"dotenv": "^16.4.5",
+		"express": "^4.21.0",
+		"mongoose": "^8.6.3"
+	}
 }
