--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "test:c": "npx jest --coverage",
     "start": "nodemon -L --files src/server.ts",
-    "docker": "docker-compose up --build"
+    "docker": "docker-compose up --build",
+    "format:other": "prettier --write '**/*.{js,json}'",
+    "format:ts": "prettier --write '**/*.ts' --parser typescript",
+    "format": "npm run format:other --silent; npm run format:ts --silent"
   },
   "keywords": [],
   "author": "Team 1",
@@ -22,6 +26,7 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
