--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "handlebars": "^4.7.8",
     "mongoose": "^8.6.3",
     "socket.io": "^4.8.0"
   }
