--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
     "mongoose": "^8.6.3",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0"
   }
 }
