--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.2",
     "eslint": "^9.11.1",
     "globals": "^15.9.0",
@@ -32,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3"
   }
 }
