--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "stop": "docker-compose down",
     "format:other": "prettier --write '**/*.{js,json}'",
     "format:ts": "prettier --write '**/*.ts' --parser typescript",
-    "format": "npm run format:other --silent; npm run format:ts --silent"
+    "format": "npm run format:other --silent; npm run format:ts --silent",
+    "lint": "eslint ."
+
   },
   "keywords": [],
   "author": "Team 1",
@@ -24,6 +26,8 @@
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.2",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^9.11.1",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
