--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "format:ts": "prettier --write '**/*.ts' --parser typescript",
     "format": "npm run format:other --silent; npm run format:ts --silent",
     "lint": "eslint ."
-
   },
   "keywords": [],
   "author": "Team 1",
@@ -22,6 +21,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.11.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
@@ -39,7 +39,7 @@
     "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
