--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,25 @@ version: "3"
 services:
   app:
     build:
-      context: .  # Use the current directory as the build context
+      context: .  
     container_name: alias_app
     ports:
-      - "3000:3000"  # Expose port 3000 for the app
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/mydatabase  # Set MongoDB URI
-      - JWT_SECRET=aP9kxN7wGzQ6v&rT24UeCjL8nW1sV0Z  # Set JWT secret
+      - "3000:3000" 
+    env_file:
+      - .env 
     depends_on:
-      - mongo  # Wait for MongoDB to be ready before starting the app
+      - mongo  
     volumes:
-      - ./:/usr/src/app  # Bind mount local directory to /usr/src/app in the container
-    command: npm run watch  # Use nodemon for hot-reloading (change this if you don't use nodemon)
+      - ./:/usr/src/app  
+    command: npm run watch  
 
   mongo:
-    image: mongo:latest  # Use the latest MongoDB image
+    image: mongo:latest  
     container_name: alias_mongo
     ports:
-      - "27017:27017"  # Expose MongoDB port
+      - "27017:27017"  
     volumes:
-      - mongo_data:/data/db  # Persist MongoDB data
+      - mongo_data:/data/db 
 
 volumes:
-  mongo_data:  # Define a named volume for MongoDB data
+  mongo_data:  
