feat: add BASE_URL from express .env to frontend

--- a/env.example
+++ b/env.example
@@ -4,3 +4,5 @@ JWT_SECRET=aP9kxN7wGzQ6v&rT24UeCjL8nW1sV0Z
 NODE_ENV=development
 # NODE_ENV=production
 # NODE_ENV=test
+
+BASE_URL=http://localhost:3000/api/v1
