--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
 PORT=3000
 MONGO_URI=mongodb://mongo:27017/mydatabase
 JWT_SECRET=aP9kxN7wGzQ6v&rT24UeCjL8nW1sV0Z
+NODE_ENV=development
+# NODE_ENV=production
+# NODE_ENV=test
