--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.96",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
