--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format:other": "prettier --write '**/*.{js,json}'",
     "format:ts": "prettier --write '**/*.ts' --parser typescript",
     "format": "npm run format:other --silent; npm run format:ts --silent",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "sass": "sass --watch ./src/public/scss:./src/public/css"
   },
   "keywords": [],
   "author": "Team 1",
@@ -34,12 +35,14 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
+    "sass": "^1.79.4",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
