--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
+    "express-mongo-sanitize": "^2.2.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.0",
