--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express-handlebars": "^8.0.1",
     "express-mongo-sanitize": "^2.2.0",
     "handlebars": "^4.7.8",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.0",
     "socket.io-client": "^4.8.0"
