--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "typescript-eslint": "^8.8.1"
   },
   "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -56,6 +58,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.0",
-    "socket.io-client": "^4.8.0"
+    "socket.io-client": "^4.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
