--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test:c": "npx jest --coverage",
     "watch": "nodemon -L --files src/server.ts",
-    "start": "docker-compose up -d --build",
+    "docker": "docker-compose up -d --build",
+    "start": "ts-node ./src/app.ts",
     "stop": "docker-compose down",
     "format:other": "prettier --write '**/*.{js,json}'",
     "format:ts": "prettier --write '**/*.ts' --parser typescript",
