feat: add build script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "format:ts": "prettier --write '**/*.ts' --parser typescript",
     "format": "npm run format:other --silent; npm run format:ts --silent",
     "lint": "eslint .",
-    "sass": "sass --watch ./src/public/scss:./src/public/css --style=compressed"
+    "sass": "sass --watch ./src/public/scss:./src/public/css --style=compressed",
+    "build": "tsc",
+    "postbuild": "node scripts/copyFiles.js"
   },
   "keywords": [],
   "author": "Team 1",
